Issue Fix - 1. registration API to accept files as a byte array or null. 2. if SMS temporarily suspended. when HP user request for reactivate then its auto-approved, but ideally, it should be sent to SMC.